Install JRE via LPM during Docker build